--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.11.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.8.1",
     "eslint-plugin-babel": "^5.3.1",
     "webpack": "^4.44.1",
